--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -110,7 +110,7 @@ services:
 
   # Backends
   tmdb:
-    image: seppaleinen/worldinmovies_tmdb
+    image: seppaleinen/worldinmovies_tmdb:latest
     expose:
       - 8020
     ports:
