--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Start containers
       run: docker-compose -f "docker-compose.yml" up -d
     - run: cd cypress
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
@@ -33,7 +33,7 @@ jobs:
     - run: npm run cypress:test
     - name: Check errors
       if: ${{ failure() }}
-      run: docker compose logs
+      run: docker compose logs && docker ps -a
     - name: Stop containers
       if: ${{ always() }}
       run: docker-compose -f "docker-compose.yml" down
