--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,7 +127,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD-SHELL", "curl -k --fail https://localhost:8020/health" ]
+      test: [ "CMD-SHELL", "curl -k --fail http://localhost:8020/health" ]
       interval: 30s
       timeout: 2s
       retries: 1
