--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -23,14 +23,13 @@ jobs:
     - uses: actions/checkout@v3
     - name: Start containers
       run: docker-compose -f "docker-compose.yml" up -d || docker-compose -f "docker-compose.yml" up -d
-    - run: cd cypress
     - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
         cache: 'npm'
-    - run: npm install
-    - run: npm run cypress:test
+    - run: npm --prefix cypress install
+    - run: npm --prefix cypress run cypress:test
     - name: Check errors
       if: ${{ failure() }}
       run: docker compose logs && docker ps -a
