--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -21,14 +21,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Start containers
-      run: docker-compose -f "docker-compose.yml" up -d || docker-compose -f "docker-compose.yml" up -d
     - name: Use Node.js 18.x
       uses: actions/setup-node@v3
       with:
         node-version: 18.x
         cache: 'npm'
         cache-dependency-path: cypress/package-lock.json
+    - run: docker-compose -f "docker-compose.yml" up -d || docker-compose -f "docker-compose.yml" up -d
     - run: npm --prefix cypress install
     - run: npm --prefix cypress run cypress:test
     - name: Check errors
