--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -39,7 +39,7 @@ jobs:
         ports:
           - "127.0.0.1:27017:27017"
         options: >-
-          --health-cmd mongosh --eval db.adminCommand('ping')
+          --health-cmd "mongosh --eval db.adminCommand('ping')"
           --health-interval 30s
           --health-timeout 20s
           --health-retries 1
