--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -53,7 +53,7 @@ jobs:
           TZ: Europe/Stockholm
           NEO4J_AUTH: neo4j/secretpassword
         options: >-
-          --health-cmd /var/lib/neo4j/bin/neo4j status
+          --health-cmd "/var/lib/neo4j/bin/neo4j status"
           --health-interval 30s
           --health-timeout 10s
           --health-retries 1
@@ -63,7 +63,7 @@ jobs:
         ports:
           - "127.0.0.1:6379:6379"
         options: >-
-          --health-cmd redis-cli ping | grep PONG
+          --health-cmd "redis-cli ping | grep PONG"
           --health-interval 30s
           --health-timeout 3s
           --health-retries 1
@@ -92,7 +92,7 @@ jobs:
           KAFKA_CFG_INTER_BROKER_LISTENER_NAME: DOCKER
           KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 1
         options: >-
-          --health-cmd kafka-topics.sh --bootstrap-server kafka:9092 --create --if-not-exists --topic movie || true && kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic movie --describe
+          --health-cmd "kafka-topics.sh --bootstrap-server kafka:9092 --create --if-not-exists --topic movie || true && kafka-topics.sh --bootstrap-server 127.0.0.1:9092 --topic movie --describe"
           --health-interval 30s
           --health-timeout 5s
           --health-retries 3
@@ -103,7 +103,7 @@ jobs:
         ports:
           - "127.0.0.1:8020:8020"
         options: >-
-          --health-cmd curl -k --fail http://localhost:8020/health
+          --health-cmd "curl -k --fail http://localhost:8020/health"
           --health-interval 30s
           --health-timeout 2s
           --health-retries 1
@@ -113,7 +113,7 @@ jobs:
         ports:
           - "127.0.0.1:8082:8082"
         options: >-
-          --health-cmd curl --fail --silent localhost:8082/actuator/health | grep UP || exit 1
+          --health-cmd "curl --fail --silent localhost:8082/actuator/health | grep UP || exit 1"
           --health-interval 10s
           --health-timeout 10s
           --health-retries 3
@@ -123,7 +123,7 @@ jobs:
         ports:
           - "127.0.0.1:8000:8000"
         options: >-
-          --health-cmd curl -k --fail https://localhost:8000/health
+          --health-cmd "curl -k --fail https://localhost:8000/health"
           --health-interval 30s
           --health-timeout 2s
           --health-retries 1
@@ -134,7 +134,7 @@ jobs:
           - "80:80"
           - "443:443"
         options: >-
-          --health-cmd nc -vz -w1 localhost 443
+          --health-cmd "nc -vz -w1 localhost 443"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
