--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -27,6 +27,7 @@ jobs:
         node-version: 18.x
         cache: 'npm'
         cache-dependency-path: cypress/package-lock.json
+    - name: Start containers
       run: docker-compose -f "docker-compose.yml" up -d || docker-compose -f "docker-compose.yml" up -d
       shell: bash
     - run: npm --prefix cypress install
