--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -29,10 +29,8 @@ jobs:
         cache-dependency-path: cypress/package-lock.json
     - name: Start containers
       run: docker-compose -f "docker-compose.yml" up -d || docker-compose -f "docker-compose.yml" up -d
-      shell: bash
-    - run: npm --prefix cypress install
-      shell: bash
-    - run: npm --prefix cypress run cypress:test
+        npm --prefix cypress install
+        npm --prefix cypress run cypress:test
       shell: bash
     - name: Check errors
       if: ${{ failure() }}
