docker copy two files in separate cmds

--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -32,7 +32,8 @@ jobs:
         docker-compose -f "docker-compose.yml" up -d || docker-compose -f "docker-compose.yml" up -d
         docker cp datasubset/tmdb.movie.json mongo:/
         docker exec mongo mongoimport -d tmdb -c movie --mode upsert --jsonArray --type json --file tmdb.movie.json
-        docker cp datasubset/postgres* postgres:/
+        docker cp datasubset/postgres.m.100.tsv postgres:/
+        docker cp datasubset/postgres.pcm.100.tsv postgres:/
         docker exec postgres psql -U postgres -d postgres COPY listings FROM '/postgres.m.100.tsv' DELIMITER E'\t' CSV HEADER;
         docker exec postgres psql -U postgres -d postgres COPY listings FROM '/postgres.pcm.100.tsv' DELIMITER E'\t' CSV HEADER;
         npm --prefix cypress install
