--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -35,8 +35,8 @@ jobs:
         docker cp datasubset/postgres.m.100.tsv postgres:/
         docker cp datasubset/postgres.pcm.100.tsv postgres:/
         docker ps
-        docker exec postgres psql -U postgres -d postgres && psql -h db -d postgres -c "COPY app_movie FROM '/postgres.m.100.tsv' DELIMITER E'\t' CSV HEADER";
-        docker exec postgres psql -U postgres -d postgres && psql -h db -d postgres -c "COPY app_productioncountries_movies FROM '/postgres.pcm.100.tsv' DELIMITER E'\t' CSV HEADER";
+        docker exec postgres psql -U postgres -d postgres && psql -h 127.0.0.1:5433 -d postgres -c "COPY app_movie FROM '/postgres.m.100.tsv' DELIMITER E'\t' CSV HEADER";
+        docker exec postgres psql -U postgres -d postgres && psql -h 127.0.0.1:5433 -d postgres -c "COPY app_productioncountries_movies FROM '/postgres.pcm.100.tsv' DELIMITER E'\t' CSV HEADER";
         npm --prefix cypress install
         npm --prefix cypress run cypress:test
       shell: bash
