--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  run_pull:
-    name: run pull
+  deploy:
+    name: Setup wireguard connection, and run ssh-script
     runs-on: ubuntu-latest
 
     steps:
-      - uses: niwee-productions/actions-ssh-wireguard@beta-0.1
+      - uses: niwee-productions/actions-ssh-wireguard@0.1
         with:
           # Required: The SSH user to connect as.
           user: ${{ secrets.SSH_USER }}
