--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
           # Required: The WireGuard configuration to use for the tunnel.
           conf: ${{ secrets.WIREGUARD_CONFIG }}
           # Required: The script to run on the remote host after the tunnel is established.
-          script: "cd workspace/worldinmovies && git pull && docker compose pull && docker compose up -d && docker system prune -f"
+          script: "cd workspace/worldinmovies && git stash && git pull && git stash pop && docker compose pull && docker compose up -d && docker system prune -f"
 
