--- a/cypress/artillery/web-scenarios.yml
+++ b/cypress/artillery/web-scenarios.yml
@@ -1,5 +1,5 @@
 config:
-  target: "https://localhost"
+  target: "https://webapp.localhost"
   plugins:
     expect:
       reportFailuresAsErrors: true
@@ -15,7 +15,7 @@ config:
         - duration: 1200
           arrivalRate: 10
     local:
-      target: "https://localhost"
+      target: "https://webapp.localhost"
       phases:
         - duration: 60
           arrivalRate: 20
