--- a/traefik.dynamic.yml
+++ b/traefik.dynamic.yml
@@ -5,9 +5,8 @@ http:
       service: "api@internal"
       tls:
         domains:
-          - main: "localhost"
+          - main: "traefik.localhost"
             sans: "*.localhost"
-
 
 tls:
   certificates:
