--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,14 @@ services:
     environment:
       - TMDB_API=${TMDB_API}
       - SENTRY_API=${SENTRY_API_TMDB:-}
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-}
+      - REDIS_URL=${REDIS_URL:-redis}
+      - MONGO_URL=${MONGO_URL:-mongo}
+      - MONGO_USER=${MONGO_USER:-seppa}
+      - MONGO_PASSWORD=${MONGO_PASSWORD:-password}
+      - RABBITMQ_URL=${RABBITMQ_URL:-rabbitmq}
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER:-seppa}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS:-password}
     depends_on:
       mongo:
         condition: service_healthy
@@ -63,7 +71,16 @@ services:
   tmdb-worker:
     image: seppaleinen/worldinmovies_tmdb:latest
     environment:
+      - TMDB_API=${TMDB_API}
       - SENTRY_API=${SENTRY_API_TMDB:-}
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-}
+      - REDIS_URL=${REDIS_URL:-redis}
+      - MONGO_URL=${MONGO_URL:-mongo}
+      - MONGO_USER=${MONGO_USER:-seppa}
+      - MONGO_PASSWORD=${MONGO_PASSWORD:-password}
+      - RABBITMQ_URL=${RABBITMQ_URL:-rabbitmq}
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER:-seppa}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS:-password}
     depends_on:
       mongo:
         condition: service_healthy
