Test fix on integrationtests

--- a/.github/workflows/IT.yml
+++ b/.github/workflows/IT.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Start containers
       run: |
         echo "VITE_WEBAPP_PORT=80" > .env
-        docker-compose -f "docker-compose.yml" up -d || docker-compose -f "docker-compose.yml" up -d
+        docker-compose up -d || docker-compose up -d
         docker cp datasubset/tmdb.movie.json mongo:/
         docker cp datasubset/tmdb.flattened_movie.json mongo:/
         docker exec mongo mongoimport -d tmdb -c movie --mode upsert --jsonArray --type json --file tmdb.movie.json
@@ -37,7 +37,8 @@ jobs:
       shell: bash
     - name: Check errors
       if: ${{ failure() }}
-      run: docker compose logs && docker ps -a
+      run: |
+        docker compose logs; docker ps -a
     - name: Stop containers
       if: ${{ always() }}
       run: docker-compose -f "docker-compose.yml" down
