--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,7 +73,7 @@ services:
     environment:
       - TMDB_API=${TMDB_API}
       - SENTRY_API=${SENTRY_API_TMDB:-}
-      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY:-}
+      - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       - REDIS_URL=${REDIS_URL:-redis}
       - MONGO_URL=${MONGO_URL:-mongo}
       - MONGO_USER=${MONGO_USER:-seppa}
